Return an immutable map from getChildEntities()
Return an immutable map from getChildEntities()

#4757